# ai-civilization-simulator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  test_ai.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_agent_risk_fields.py
backend/app/: enums.py  main.py  seed_data.py
backend/app/ai/: context_builder.py  schemas.py  service.py
backend/app/ai/prompts/: ask_agent.txt  turn_summary.txt
backend/app/api/: deps.py
backend/app/api/routes/: agents.py  ai.py  simulation.py  timeline.py  worlds.py
backend/app/core/: config.py  database.py
backend/app/domain/: simulation_service.py
backend/app/models/: db.py
backend/app/schemas/: __init__.py
backend/app/simulation/: calendar.py  pipeline.py  pressure.py  runner.py  types.py
backend/app/simulation/economy/: __init__.py  trade.py
backend/app/simulation/health/: __init__.py
backend/app/simulation/social/: __init__.py  gossip.py  relationships.py
backend/seed/: village_seed.py
backend/tests/: fixtures.py
backend/tests/ai/: test_ai_schemas.py  test_ai_service.py  test_fallback.py
backend/tests/api/: test_reset_world.py  test_schemas.py
backend/tests/simulation/: conftest.py  test_agent_names.py  test_agent_refresh.py  test_calendar.py  test_economy.py  test_hardening.py  test_phase3_pipeline.py  test_pipeline.py  test_pressure.py  test_risk_diversification.py  test_runner.py  test_social.py  test_state_feedback.py  test_world_advance.py  test_world_events.py
(+45 files in other folders)
